z-index overlay contact fixed

--- a/styles/contact-style.css
+++ b/styles/contact-style.css
@@ -28,7 +28,6 @@
   font-size: 2rem;
   margin-bottom: 4.8rem;
   text-align: center;
-  z-index: -1;
 }
 
 .contact-greetings {
