--- a/styles/queries.css
+++ b/styles/queries.css
@@ -89,6 +89,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
+    z-index: 1;
 
     /* CENTER CONTENT */
     display: flex;
